Experience page UI fixed - Cards color fixed in dark mode

--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -7,6 +7,7 @@ html[data-theme="light"] {
   --shadow-col2:#ffffff;
   --meta-col: #444;
   --head-col: black;
+  --cards-bg:#ffffff;
  }
  
  html[data-theme="dark"] {
@@ -18,6 +19,7 @@ html[data-theme="light"] {
   --shadow-col2:#1d1d1d;
   --meta-col: rgb(155, 149, 149);
   --head-col: #fff;
+  --cards-bg:#2B2A2A;
  }
 /*Main section*/
 
@@ -131,7 +133,7 @@ section {height: 95vh;}
 }
 
 .card1 {
-  background: #ffffff;
+  background-color: var( --cards-bg);
   display: flex;
   flex-direction: column;
   max-height: 80%;
@@ -171,8 +173,8 @@ section {height: 95vh;}
   display: flex;
   flex-flow: row wrap;
   padding: 18px;
-  color: var(--text);
-  background-color: #fff;
+  color: var(--text-color);
+  background-color: var(--cards-bg);
   border-radius: 0 13px 13px 0;
 }
 
@@ -436,8 +438,8 @@ ul ol{
   padding: 1rem;
   width: 100%;
   text-align: center;
-  color: black;
-  background-color: whitesmoke;
+  color: var(--text-color);
+  background-color: var(--cards-bg);
   border: none;
 }
 
@@ -544,6 +546,7 @@ ul ol{
   font-size: 1.125rem;
   font-style: italic;
   line-height: 1.35;
+  
 }
 
 /* .page-content .cardafter {
@@ -644,8 +647,8 @@ ul ol{
 }
 
 .card2{
-  /* background-color: var(--bg1-color); */
-  color: var(--text);
+  background-color: var(--cards-bg);
+  color: var(--text-color);
 }
 
 .card2 .fa{
